--- a/src/components/SearchComponent/SearchInput.css
+++ b/src/components/SearchComponent/SearchInput.css
@@ -61,7 +61,7 @@
   
   
 
-@media (max-width: 680px) {
+@media (max-width: 780px) {
     .search-container{
         width: 300px;
         align-self: center !important;
